--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!-- Example 1: Simple Landing Page -->
-<!doctype html><html lang="en">
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
